@@ -25,9 +25,8 @@
 # ***** modify the following variables according to your env *****
 #
 
-#DFT_BIN=/home/ferretti/espresso/bin
-DFT_BIN=/home/ferretti/espresso-2.1.5/bin
-TMPDIR=/scratch/WanT_TMP
+DFT_BIN=/home/benedett/espresso-2.1.5/bin
+TMPDIR=/home/benedett/scratch/WanT
 
 PARA_PREFIX=
 PARA_POSTFIX=
